# ChangeLog for dev-ruby/classifier-reborn
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/classifier-reborn/ChangeLog,v 1.2 2014/08/13 16:38:40 mrueg Exp $

  13 Aug 2014; Manuel Rüger <mrueg@gentoo.org> classifier-reborn-2.0.0.ebuild:
  Add hardblocker on dev-ruby/classifier.

*classifier-reborn-2.0.0 (13 Aug 2014)

  13 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +classifier-reborn-2.0.0.ebuild,
  +metadata.xml:
  Initial version, fork from dev-ruby/classifier.