@@ -1,4 +1,6 @@
 DIST classifier-reborn-2.0.0.tar.gz 22187 SHA256 72f3a7868c7955c3ecd1caacb73c102e16504bca375a894d6363f1900e143ca3 SHA512 d72d80fc06301c38786df8f4b61bba9a7aff505db6255f06a7e7aa31ee2568c95dafdf4ed1f7eafdbcb5ae44af9be7f875fc1435cb4b874c6dc46d1408746e3c WHIRLPOOL 29a83a61f6bd4b6a028e2471bd44e3efe9628249a801d3265b64e44b3dcd43f7cc776047c587683cdc609f117b0e38726caa3980e0323983ab86c7e1703460d0
+DIST classifier-reborn-2.0.1.tar.gz 22268 SHA256 59cd47cc13f10094a772084feb20a2e4a61b053036698c2f66d33df43194af2b SHA512 624f17e604756dde22e05dd6dc7f4057d738367e02c1e096c98446db705e35b08c646cbbfbb1fdc3afb13aaadc492026fc64bb7565e897ce239001b3f1d5935d WHIRLPOOL 940bc974baa50f0e35b85f13eb0ad36b7163719d09a0627634675fff6a5643157c4684d18d94f165155548ccd6dd6caedbe2513e37e38354ccb1e6b502e8e7cf
 EBUILD classifier-reborn-2.0.0.ebuild 888 SHA256 309ae902fe2c3f65aa36d7a87486111c9ba0af2fc63e5ed80cfd648f7825ca26 SHA512 3049f112a742cccdc92e622d7120faa3643ff2775735f2c405cd187184ade2e208ec0927d9b46d89287521af521e16796bea7a22e5e37a55d47a36e67c13b452 WHIRLPOOL 396a78e96a03a60d83878ce23ae2f6347eb69c9b26993b323ddb91b997657de877f6d869f19cb552e97ef9e8afef6ef9c7101a68ad3f99108bb7297a263096e1
-MISC ChangeLog 535 SHA256 ceadc244cef61ccfd1ffa54b5ef398d4b0698cac02a2657f42fa60c096fee18a SHA512 fb9b0d33671c886c8c590ed871e948bf63d9782fa3bf88f0ea9e9089bba3714af9cae540dfec9aa26501a85dcc94d9e18b5d805537d6bae9fbf3f8ced6ac1527 WHIRLPOOL abc64dde3e0b2bce1a918b99071d6095da0384b4fe55a4d97eca80ea74a1ea446011f673491bc6c72048175fd275bcfb15c8342a2867f708c8ca6e69652f15f8
+EBUILD classifier-reborn-2.0.1.ebuild 888 SHA256 745a7abe46c33779108f278884747c3f77a97da560197dcc16ec5bd5aa515ea6 SHA512 cfad9700539e8c500c1ad82d998c05d2cb7f80fe63f0a43ca25a9c1d07c646d05f9d383a8af04d522094d6730c4dd6e27958b2427e4726566367c32499841465 WHIRLPOOL 9e38e02003cecbce17f96a73c3f1b48ec09ffc764af9f0f0573d6516e47b3a0a9dea41d5ef18b4603f89362948d02281cb75d024076107a53cdceaabe9c38656
+MISC ChangeLog 673 SHA256 bab3a4a71e86e6604fddfc30b890e9171816e6f559bdd536e7a91f9062187bf8 SHA512 f666e1d7c387ae6ce76d8a29a02ad7c28464a4d9288868c57811668e920a00e7ac15f4e062c4a571fd6b8dbbe8bb5cf8b1c41b72d8d7720445a32cd6be4d268b WHIRLPOOL f97e43e479883ad9109036f86a0009abfd3aecbd73a1292ea22b5406007a3045b9be6e184c94e8c9900b6863791f6803dd762637bb0084d0ea68e62e950d9b99
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
