@@ -1,0 +1,31 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/classifier-reborn/classifier-reborn-2.0.1.ebuild,v 1.1 2014/08/16 12:53:52 mrueg Exp $
+
+EAPI=5
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="README.markdown"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Module to allow Bayesian and other types of classifications"
+HOMEPAGE="https://github.com/jekyll/classifier-reborn"
+SRC_URI="https://github.com/jekyll/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
+
+LICENSE="LGPL-2.1"
+SLOT="0"
+KEYWORDS="~amd64"
+IUSE="gsl"
+
+ruby_add_rdepend ">=dev-ruby/fast-stemmer-1.0.0
+	!!dev-ruby/classifier
+	gsl? ( dev-ruby/rb-gsl )"
+
+all_ruby_prepare() {
+	sed -i -e "/[Bb]undler/d" Rakefile || die
+	if use !gsl; then
+		sed -e 's/$GSL = true/$GSL = false/' -i lib/${PN}/lsi.rb || die
+	fi
+}
