@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby19] !!dev-ruby/classifier[ruby_targets_ruby19] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby20] !!dev-ruby/classifier[ruby_targets_ruby20] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby21] !!dev-ruby/classifier[ruby_targets_ruby21] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby21] ) ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Module to allow Bayesian and other types of classifications
+EAPI=5
+HOMEPAGE=https://github.com/jekyll/classifier-reborn
+IUSE=gsl test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
+KEYWORDS=~amd64
+LICENSE=LGPL-2.1
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby19] !!dev-ruby/classifier[ruby_targets_ruby19] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby20] !!dev-ruby/classifier[ruby_targets_ruby20] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( >=dev-ruby/fast-stemmer-1.0.0[ruby_targets_ruby21] !!dev-ruby/classifier[ruby_targets_ruby21] gsl? ( dev-ruby/rb-gsl[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=0
+SRC_URI=https://github.com/jekyll/classifier-reborn/archive/v2.0.1.tar.gz -> classifier-reborn-2.0.1.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=2c3bc6b757242f3b9a5813488eb53cf5
