@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( dev-ruby/classifier-reborn[ruby_targets_ruby19] dev-ruby/colorator[ruby_targets_ruby19] >=dev-ruby/kramdown-1.3[ruby_targets_ruby19] >=dev-ruby/liquid-2.6.1[ruby_targets_ruby19] >=dev-ruby/mercenary-0.3.3[ruby_targets_ruby19] >=dev-ruby/pygments_rb-0.6.0[ruby_targets_ruby19] >=dev-ruby/redcarpet-3.1[ruby_targets_ruby19] >=dev-ruby/safe_yaml-1[ruby_targets_ruby19] dev-ruby/toml[ruby_targets_ruby19] www-apps/jekyll-coffeescript[ruby_targets_ruby19] www-apps/jekyll-gist[ruby_targets_ruby19] www-apps/jekyll-paginate[ruby_targets_ruby19] www-apps/jekyll-sass-converter[ruby_targets_ruby19] www-apps/jekyll-watch[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/classifier-reborn[ruby_targets_ruby20] dev-ruby/colorator[ruby_targets_ruby20] >=dev-ruby/kramdown-1.3[ruby_targets_ruby20] >=dev-ruby/liquid-2.6.1[ruby_targets_ruby20] >=dev-ruby/mercenary-0.3.3[ruby_targets_ruby20] >=dev-ruby/pygments_rb-0.6.0[ruby_targets_ruby20] >=dev-ruby/redcarpet-3.1[ruby_targets_ruby20] >=dev-ruby/safe_yaml-1[ruby_targets_ruby20] dev-ruby/toml[ruby_targets_ruby20] www-apps/jekyll-coffeescript[ruby_targets_ruby20] www-apps/jekyll-gist[ruby_targets_ruby20] www-apps/jekyll-paginate[ruby_targets_ruby20] www-apps/jekyll-sass-converter[ruby_targets_ruby20] www-apps/jekyll-watch[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/activesupport:3.2[ruby_targets_ruby19] dev-ruby/launchy[ruby_targets_ruby19] >=dev-ruby/maruku-0.7[ruby_targets_ruby19] dev-ruby/mime-types:0[ruby_targets_ruby19] =dev-ruby/rdiscount-1.6*[ruby_targets_ruby19] dev-ruby/redcloth[ruby_targets_ruby19] dev-ruby/rouge[ruby_targets_ruby19] dev-ruby/rr[ruby_targets_ruby19] >=dev-ruby/shoulda-3[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/activesupport:3.2[ruby_targets_ruby20] dev-ruby/launchy[ruby_targets_ruby20] >=dev-ruby/maruku-0.7[ruby_targets_ruby20] dev-ruby/mime-types:0[ruby_targets_ruby20] =dev-ruby/rdiscount-1.6*[ruby_targets_ruby20] dev-ruby/redcloth[ruby_targets_ruby20] dev-ruby/rouge[ruby_targets_ruby20] dev-ruby/rr[ruby_targets_ruby20] >=dev-ruby/shoulda-3[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) )
+DEPEND=test? ( ruby_targets_ruby19? ( dev-ruby/classifier-reborn[ruby_targets_ruby19] dev-ruby/colorator[ruby_targets_ruby19] >=dev-ruby/kramdown-1.3[ruby_targets_ruby19] >=dev-ruby/liquid-2.6.1[ruby_targets_ruby19] >=dev-ruby/mercenary-0.3.3[ruby_targets_ruby19] >=dev-ruby/pygments_rb-0.6.0[ruby_targets_ruby19] >=dev-ruby/redcarpet-3.1[ruby_targets_ruby19] >=dev-ruby/safe_yaml-1[ruby_targets_ruby19] dev-ruby/toml[ruby_targets_ruby19] www-apps/jekyll-coffeescript[ruby_targets_ruby19] www-apps/jekyll-gist[ruby_targets_ruby19] www-apps/jekyll-paginate[ruby_targets_ruby19] www-apps/jekyll-sass-converter[ruby_targets_ruby19] www-apps/jekyll-watch[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/classifier-reborn[ruby_targets_ruby20] dev-ruby/colorator[ruby_targets_ruby20] >=dev-ruby/kramdown-1.3[ruby_targets_ruby20] >=dev-ruby/liquid-2.6.1[ruby_targets_ruby20] >=dev-ruby/mercenary-0.3.3[ruby_targets_ruby20] >=dev-ruby/pygments_rb-0.6.0[ruby_targets_ruby20] >=dev-ruby/redcarpet-3.1[ruby_targets_ruby20] >=dev-ruby/safe_yaml-1[ruby_targets_ruby20] dev-ruby/toml[ruby_targets_ruby20] www-apps/jekyll-coffeescript[ruby_targets_ruby20] www-apps/jekyll-gist[ruby_targets_ruby20] www-apps/jekyll-paginate[ruby_targets_ruby20] www-apps/jekyll-sass-converter[ruby_targets_ruby20] www-apps/jekyll-watch[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/activesupport:3.2[ruby_targets_ruby19] dev-ruby/launchy[ruby_targets_ruby19] >=dev-ruby/maruku-0.7[ruby_targets_ruby19] dev-ruby/mime-types:0[ruby_targets_ruby19] =dev-ruby/rdiscount-1.6*[ruby_targets_ruby19] dev-ruby/redcloth[ruby_targets_ruby19] dev-ruby/rouge[ruby_targets_ruby19] dev-ruby/rr[ruby_targets_ruby19] >=dev-ruby/shoulda-3[ruby_targets_ruby19] dev-ruby/test-unit:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/activesupport:3.2[ruby_targets_ruby20] dev-ruby/launchy[ruby_targets_ruby20] >=dev-ruby/maruku-0.7[ruby_targets_ruby20] dev-ruby/mime-types:0[ruby_targets_ruby20] =dev-ruby/rdiscount-1.6*[ruby_targets_ruby20] dev-ruby/redcloth[ruby_targets_ruby20] dev-ruby/rouge[ruby_targets_ruby20] dev-ruby/rr[ruby_targets_ruby20] >=dev-ruby/shoulda-3[ruby_targets_ruby20] dev-ruby/test-unit:2[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) )
 DESCRIPTION=A simple, blog aware, static site generator
 EAPI=5
 HOMEPAGE=http://jekyllrb.com http://github.com/mojombo/jekyll
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
 SLOT=0
 SRC_URI=https://github.com/jekyll/jekyll/archive/v2.3.0.tar.gz -> jekyll-2.3.0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=0c045a00eb3678d2998f16f4ff3a149e
+_md5_=8c4c024821b4c0b78cfdcdcff776ba6c
