@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/jekyll
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll/ChangeLog,v 1.3 2014/08/15 14:59:15 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll/ChangeLog,v 1.4 2014/08/16 13:09:59 mrueg Exp $
+
+  16 Aug 2014; Manuel Rüger <mrueg@gentoo.org> jekyll-2.3.0.ebuild:
+  Add missing test dependency.
 
 *jekyll-2.3.0 (15 Aug 2014)
 
